src/output/snapshots/xot__output__pretty__tests__comment.snap
---
source: src/output/pretty.rs
expression: "<doc><a><!--hello--><!--world--></a></doc>"
---
<doc>
  <a>
    <!--hello-->
    <!--world-->
  </a>
</doc>

