src/output/snapshots/xot__output__pretty__tests__mixed, comment.snap
---
source: src/output/pretty.rs
expression: "<doc><p>Hello <!--world-->!</p></doc>"
---
<doc>
  <p>Hello <!--world-->!</p>
</doc>

