src/output/snapshots/xot__output__pretty__tests__mixed, embedded.snap
---
source: src/output/pretty.rs
expression: "<doc><p>Hello <nested><stuff>a</stuff><stuff>b</stuff></nested></p></doc>"
---
<doc>
  <p>Hello <nested><stuff>a</stuff><stuff>b</stuff></nested></p>
</doc>

