src/output/snapshots/xot__output__pretty__tests__mixed, nested.snap
---
source: src/output/pretty.rs
expression: "<doc><p>Hello <em><strong>world</strong></em>!</p></doc>"
---
<doc>
  <p>Hello <em><strong>world</strong></em>!</p>
</doc>

