src/output/snapshots/xot__output__pretty__tests__mixed.snap
---
source: src/output/pretty.rs
expression: "<doc><p>Hello <em>world</em>!</p></doc>"
---
<doc>
  <p>Hello <em>world</em>!</p>
</doc>

