src/output/snapshots/xot__output__pretty__tests__more elements.snap
---
source: src/output/pretty.rs
expression: "<doc><a><b/></a><a><b/><b/></a></doc>"
---
<doc>
  <a>
    <b/>
  </a>
  <a>
    <b/>
    <b/>
  </a>
</doc>

