src/output/snapshots/xot__output__pretty__tests__multi pi.snap
---
source: src/output/pretty.rs
expression: "<doc><a><?pi?><?pi?></a></doc>"
---
<doc>
  <a>
    <?pi?>
    <?pi?>
  </a>
</doc>

