src/output/snapshots/xot__output__pretty__tests__not suppressed.snap
---
source: src/output/pretty.rs
expression: "<doc><a><b/></a></doc>"
---
<doc>
  <a>
    <b/>
  </a>
</doc>

