src/output/snapshots/xot__output__pretty__tests__preserve.snap
---
source: src/output/pretty.rs
expression: "<doc xml:space=\"preserve\"><p>Hello</p></doc>"
---
<doc xml:space="preserve"><p>Hello</p></doc>

