src/output/snapshots/xot__output__pretty__tests__preserve_back_to_default.snap
---
source: src/output/pretty.rs
expression: "<doc xml:space=\"preserve\"><p xml:space=\"default\"><foo><bar/></foo></p></doc>"
---
<doc xml:space="preserve"><p xml:space="default">
  <foo>
    <bar/>
  </foo>
</p></doc>

