src/output/snapshots/xot__output__pretty__tests__preserve_nested.snap
---
source: src/output/pretty.rs
expression: "<doc xml:space=\"preserve\">  <p><foo>  </foo></p></doc>"
---
<doc xml:space="preserve">  <p><foo>  </foo></p></doc>

